# qrcode-recognition

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
